--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*CSS HEX
+--deep-taupe: #795c5fff;
+--metallic-sunburst: #a69658ff;
+--burlywood: #d9b26fff;
+--jasmine: #fadf7fff;
+--medium-champagne: #f2e29fff;
+
+ CSS HSL 
+--deep-taupe: hsla(354, 14%, 42%, 1);
+--metallic-sunburst: hsla(48, 31%, 50%, 1);
+--burlywood: hsla(38, 58%, 64%, 1);
+--jasmine: hsla(47, 92%, 74%, 1);
+--medium-champagne: hsla(48, 76%, 79%, 1);
+*/
+
+h5{
+  color: #795c5fff;
+  color: #a69658ff;
+  color: #d9b26fff;
+  color: #fadf7fff;
+  color: #f2e29fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  background: #f2e29fff;
+  color:black;
+  font-family: 'Spline Sans', sans-serif;
+}
+
+#root {
+  margin: 0 24px;
+  position: relative;
+  min-height: 100vh;
 }
